<resources>
    <string name="app_name">Contacts2</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="number">8147921339</string>
    <string name="save">SAVE</string>
    <string name="new_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
</resources>
