<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".EditContact">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/male"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/imageView_editImage"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_editImage"
        android:hint="@string/new_name"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:maxLines="1"
        android:capitalize="words"
        android:id="@+id/editText_editName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_editName"
        android:hint="@string/contact_number"
        android:textSize="25sp"
        android:id="@+id/editText_editNumber"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:maxLines="1"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editText_editNumber"
        android:id="@+id/radioGroup_edit">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"
            android:id="@+id/radio_editMale"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"
            android:id="@+id/radio_editFemale"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/radioGroup_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/button_editSave"
        android:background="@drawable/floating_button"
        android:text="@string/done"/>
</RelativeLayout>