<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#E0F7FA"
    tools:context=".AddNewContact">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/male"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/imageView_newImage"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_newImage"
        android:hint="@string/new_name"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:maxLines="1"
        android:inputType="textCapWords"
        android:id="@+id/editText_newName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_newName"
        android:hint="@string/contact_number"
        android:textSize="25sp"
        android:id="@+id/editText_newNumber"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:maxLines="1"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editText_newNumber"
        android:id="@+id/radioGroup_new">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"
            android:checked="true"
            android:id="@+id/radio_newMale"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"
            android:id="@+id/radio_newFemale"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/radioGroup_new"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/button_NewSave"
        android:background="@drawable/floating_button"
        android:text="@string/done"/>






</RelativeLayout>